create another container for 'printing'
It looks like our wkhtmltopdf doesn't understand page breaks along the
cell lines.  Yet when we open the html in chrome and try the same it
does it perfectly.

So we're going to explore using another container with chromium headless
that we can print from.  This establishes the 'printer' container with
Node, Chromium, and Puppeteer from
https://blog.risingstack.com/pdf-from-html-node-js-puppeteer/

--- a/splitter/Dockerfile
+++ b/splitter/Dockerfile
@@ -8,7 +8,7 @@ RUN tar xvjf wkhtmltopdf-0.9.9-static-amd64.tar.bz2
 RUN mv wkhtmltopdf-amd64 /usr/local/bin/wkhtmltopdf && chmod +x /usr/local/bin/wkhtmltopdf
 
 
-COPY splitter /usr/local/bin
+COPY splitter /usr/local/bin/
 RUN chmod 755 /usr/local/bin/splitter
 
 WORKDIR "/MT"
