New Procedure for pdf generation
This changes the pdf generation from wkhtml2pdf which was not breaking
the pages correctly.

The new process is much slower as it uses a chromium browser to load the
html pages and render the pdf.  This uses the chromium browser to break
the page, which it does admirably.

This uses a second docker image for chromium and the node script to
print with it.  Make sure to ./dockerbuild again.

--- a/printer/Dockerfile
+++ b/printer/Dockerfile
@@ -2,6 +2,7 @@ FROM alpine:edge
 
 # Installs latest Chromium (85) package.
 RUN apk add --no-cache \
+      bash \
       chromium \
       nss \
       freetype \
@@ -18,7 +19,7 @@ ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
     PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
 
 # Puppeteer v5.2.1 works with Chromium 85.
-RUN yarn add puppeteer@5.2.1
+RUN yarn add puppeteer@5.2.1 async@3.2.0 html-pdf-chrome@0.6.1
 
 # Add user so we don't need --no-sandbox.
 RUN addgroup -S pptruser && adduser -S -g pptruser pptruser \
@@ -29,7 +30,7 @@ RUN addgroup -S pptruser && adduser -S -g pptruser pptruser \
 # Run everything after as non-privileged user.
 USER pptruser
 
-WORKDIR "/MT"
+WORKDIR "/WorkDir"
 
-ENTRYPOINT [ "node" ]
+ENTRYPOINT [ "printer/html2pdf" ]
 
